[gd_scene load_steps=5 format=3 uid="uid://dhg0ohpps2lt8"]

[ext_resource type="Script" path="res://game_scenes/game_screen/dropdown.gd" id="1_y6a3v"]
[ext_resource type="FontFile" uid="uid://duv0rbeynolx2" path="res://pixel font/kongtext.ttf" id="2_8rqkl"]
[ext_resource type="Theme" path="res://pixel font/small_font_theme.tres" id="3_mo277"]

[sub_resource type="Theme" id="Theme_xti8j"]
default_font = ExtResource("2_8rqkl")
default_font_size = 10

[node name="Node2D" type="Node2D"]
script = ExtResource("1_y6a3v")

[node name="attack_option" type="OptionButton" parent="."]
offset_left = 150.0
offset_top = 500.0
offset_right = 350.0
offset_bottom = 531.0
theme = SubResource("Theme_xti8j")
theme_override_font_sizes/font_size = 10

[node name="defend_option" type="OptionButton" parent="."]
offset_left = 800.0
offset_top = 500.0
offset_right = 1000.0
offset_bottom = 531.0
theme = ExtResource("3_mo277")

[connection signal="item_selected" from="attack_option" to="." method="_on_attack_option_item_selected"]
[connection signal="item_selected" from="attack_option" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="defend_option" to="." method="_on_defend_option_item_selected"]
